--- a/Gifts/Gifts/ClientApp/package.json
+++ b/Gifts/Gifts/ClientApp/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "react": "^16.0.0",
-    "react-bootstrap": "^0.31.5",
-    "react-dom": "^16.0.0",
-    "react-router-bootstrap": "^0.24.4",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
-    "rimraf": "^2.6.2"
+    "react": "16.8.6",
+    "react-bootstrap": "0.32.4",
+    "react-dom": "16.8.6",
+    "react-router-bootstrap": "0.24.4",
+    "react-router-dom": "4.3.1",
+    "react-scripts": "1.1.5",
+    "rimraf": "3.0.0",
+    "@material-ui/core": "4.4.2"
   },
   "scripts": {
     "start": "rimraf ./build && react-scripts start",
